# magic-afm

./: .gitignore  README.rst  _make_version.py  async_tools.py  build.bat  data_readers.py  help_page.html  magic fitting workflow.ipynb  magic_afm.py  magic_afm_win.spec  magic_calculation.py  magic_gui.py  magic_gui.spec  magic_gui_mac.spec  magic_gui_win.spec  make_version.py  pyproject.toml  requirements-nightly-mpl.txt  requirements.in  requirements.txt
.github/workflows/: build.yaml
magic_afm/: _make_version.py  _util.py  _vendored_lstsq.py  _vendored_root.py  async_tools.py  calculation.py  data_readers.py  gui.py  make_version.py
magic_afm/cli/: __main__.py  _impl.py
magic_afm/gui/: __main__.py  _impl.py
